--- a/not-synced/pyproject.toml
+++ b/not-synced/pyproject.toml
@@ -132,10 +132,14 @@ select = [
     "A", # flake8-builtins
     "ANN", # flake8-annotations
     "ARG", # flake8-unused-arguments
+    "B", # flake8-bugbear
     "BLE", # flake8-blind-except
     "C4", # flake8-comprehensions
+    "C90", # mccabe
+    "COM", # flake8-commas
     "E", # pycodestyle Error
     "F", # Pyflakes
+    "FBT", # flake8-boolean-trap
     "I", # isort
     "ICN", # flake8-import-conventions
     "INP", # flake8-no-pep420
@@ -150,10 +154,12 @@ select = [
     "RET", # flake8-return
     "RSE", # flake8-raise
     "RUF", # ruff-specific rules
+    "S", # flake8-bandit
     "SIM", # flake8-simplify
     "TID", # flake8-tidy-imports
     "UP", # pyupgrade
     "W", # pycodestyle Warning
+    "YTT", # flake8-2020
 
 ]
 ignore = [
