--- a/not-synced/pyproject.toml
+++ b/not-synced/pyproject.toml
@@ -7,56 +7,55 @@ dependencies = []
 requires-python = ">=3.12"
 license = { text = "MIT" }
 
+# Setuptools
 [build-system]
-requires = ["pdm-backend"]
-build-backend = "pdm.backend"
+build-backend = "setuptools.build_meta"
+requires = ["setuptools", "wheel"]
 
-[tool.pdm.dev-dependencies]
-dev = [
-    "ipykernel>=6.22.0",
-    "mkdocs-material>=9.1.9",
-    "mkdocs>=1.4.3",
-    "mypy>=1.2.0",
-    "pre-commit>=3.2.2",
-    "pytest-clarity>=1.0.1",
-    "pytest-cov>=4.0.0",
-    "pytest-lazy-fixture>=0.6.3",
-    "pytest-mock>=3.10.0",
-    "pytest-xdist>=3.3.1",
-    "pytest>=7.2.2",
-    "ruff>=0.0.261",
-    "types-requests>=2.28.11.17",
-]
-
-[tool.pdm.scripts]
-# built-in commands: pdm add, pdm remove, pdm install, pdm fix, pdm update, pdm self
-# update, pdm list, pdm show, pdm build, pdm publish
-# see docs at
-# https://pdm.fming.dev/latest/usage/dependency/#select-a-subset-of-dependency-groups-to-be-installed-or-locked # noqa
-# to install all or specific dependency groups
-setup = "pdm install"
-update-pdm = "pdm self update"
-update-deps = "pdm update"
-update-all = { composite = ["update-pdm", "update-deps"] }
-format = "ruff format ."
-lint = "ruff --fix --exit-non-zero-on-fix --show-fixes ."
-check = "mypy ."
-check-no-tests = "mypy . --exclude tests" # do not run mypy on `tests` directory
-test = "pytest"
-test-cov = "pytest --cov=<package_name>"
-test-slow = "pytest -m 'slow'" # run all tests marked with `@pytest.mark.slow`
-test-fast = "pytest -m 'not slow'" # run all tests except those marked with `@pytest.mark.slow`
-# run all tests except those marked with `@pytest.mark.skip_ci` and create coverage report
-test-ci = "pytest -m 'not skip_ci' --cov=<package_name> --cov-report=xml"
-pre = "pre-commit run --all-files"
-serve = "mkdocs serve"
-deploy = { shell = "mkdocs build && mkdocs gh-deploy" }
-fastapi = "uvicorn app.main:app --reload"
-
-# [tool.black]
-# line-length = 100
-# target-version = ['py311']
-# include = '\.pyi?$'
+# PDM
+# [build-system]
+# requires = ["pdm-backend"]
+# build-backend = "pdm.backend"
+# [tool.pdm.dev-dependencies]
+# dev = [
+#     "ipykernel>=6.22.0",
+#     "mkdocs-material>=9.1.9",
+#     "mkdocs>=1.4.3",
+#     "mypy>=1.2.0",
+#     "pre-commit>=3.2.2",
+#     "pytest-clarity>=1.0.1",
+#     "pytest-cov>=4.0.0",
+#     "pytest-lazy-fixture>=0.6.3",
+#     "pytest-mock>=3.10.0",
+#     "pytest-xdist>=3.3.1",
+#     "pytest>=7.2.2",
+#     "ruff>=0.0.261",
+#     "types-requests>=2.28.11.17",
+# ]
+# [tool.pdm.scripts]
+# # built-in commands: pdm add, pdm remove, pdm install, pdm fix, pdm update, pdm self
+# # update, pdm list, pdm show, pdm build, pdm publish
+# # see docs at
+# # https://pdm.fming.dev/latest/usage/dependency/#select-a-subset-of-dependency-groups-to-be-installed-or-locked # noqa
+# # to install all or specific dependency groups
+# setup = "pdm install"
+# update-pdm = "pdm self update"
+# update-deps = "pdm update"
+# update-all = { composite = ["update-pdm", "update-deps"] }
+# format = "ruff format ."
+# lint = "ruff --fix --exit-non-zero-on-fix --show-fixes ."
+# check = "mypy ."
+# check-no-tests = "mypy . --exclude tests" # do not run mypy on `tests` directory
+# test = "pytest"
+# test-cov = "pytest --cov=<package_name>"
+# test-slow = "pytest -m 'slow'" # run all tests marked with `@pytest.mark.slow`
+# test-fast = "pytest -m 'not slow'" # run all tests except those marked with `@pytest.mark.slow`
+# # run all tests except those marked with `@pytest.mark.skip_ci` and create coverage report
+# test-ci = "pytest -m 'not skip_ci' --cov=<package_name> --cov-report=xml"
+# pre = "pre-commit run --all-files"
+# serve = "mkdocs serve"
+# deploy = { shell = "mkdocs build && mkdocs gh-deploy" }
+# fastapi = "uvicorn app.main:app --reload"
 # see all options at
 # https://mypy.readthedocs.io/en/stable/config_file.html#the-mypy-configuration-file
 [tool.mypy]
@@ -69,7 +68,7 @@ disallow_any_explicit = false
 disallow_untyped_calls = true
 disallow_untyped_defs = true
 disallow_incomplete_defs = true
-disallow_untyped_decorators = true
+disallow_untyped_decorators = false
 # None and Optional handling
 implicit_optional = false
 strict_optional = true
