update obsidian folder icons

--- a/obsidian/app.json
+++ b/obsidian/app.json
@@ -4,11 +4,11 @@
   "showFrontmatter": true,
   "livePreview": true,
   "trashOption": "local",
-  "newFileLocation": "folder",
+  "newFileLocation": "root",
   "showUnsupportedFiles": true,
   "autoPairMarkdown": true,
-  "newFileFolderPath": "99 Inbox",
-  "attachmentFolderPath": "70 Attachments",
+  "newFileFolderPath": "/",
+  "attachmentFolderPath": "Attachments",
   "mobilePullAction": "switcher:open",
   "defaultViewMode": "source",
   "mobileToolbarCommands": [
