--- a/not-synced/pyproject.toml
+++ b/not-synced/pyproject.toml
@@ -118,30 +118,23 @@ classmethod-decorators = [
 # see all options at
 # https://mypy.readthedocs.io/en/stable/config_file.html#the-mypy-configuration-file
 [tool.mypy]
-# Import discovery
-ignore_missing_imports = true
-# Disallow dynamic typing
-disallow_any_expr = false
+ignore_missing_imports = true # Import discovery
+disallow_any_expr = false # Disallow dynamic typing
 disallow_any_explicit = false
-# Untyped definitions and calls
-disallow_untyped_calls = true
+disallow_untyped_calls = true # Untyped definitions and calls
 disallow_untyped_defs = true
 disallow_incomplete_defs = true
 disallow_untyped_decorators = false
-# None and Optional handling
-implicit_optional = false
+implicit_optional = false # None and Optional handling
 strict_optional = true
-# Configuring warnings
-warn_redundant_casts = true
+warn_redundant_casts = true # Configuring warnings
 warn_unused_ignores = false # too many false positives
 warn_no_return = true
 warn_return_any = false
 warn_unreachable = true
-# Miscellaneous strictness flags
-allow_redefinition = true
+allow_redefinition = true # Miscellaneous strictness flags
 strict_equality = true
-# Configuring error messages
-show_error_context = true
+show_error_context = true # Configuring error messages
 hide_error_codes = false
 pretty = true
 color_output = true
@@ -177,47 +170,3 @@ exclude_lines = [
     "if TYPE_CHECKING:",
     "from typing_extensions import "
 ]
-# PDM
-# [build-system]
-# requires = ["pdm-backend"]
-# build-backend = "pdm.backend"
-# [tool.pdm.dev-dependencies]
-# dev = [
-#     "ipykernel>=6.22.0",
-#     "mkdocs-material>=9.1.9",
-#     "mkdocs>=1.4.3",
-#     "mypy>=1.2.0",
-#     "pre-commit>=3.2.2",
-#     "pytest-clarity>=1.0.1",
-#     "pytest-cov>=4.0.0",
-#     "pytest-lazy-fixture>=0.6.3",
-#     "pytest-mock>=3.10.0",
-#     "pytest-xdist>=3.3.1",
-#     "pytest>=7.2.2",
-#     "ruff>=0.0.261",
-#     "types-requests>=2.28.11.17",
-# ]
-# [tool.pdm.scripts]
-# # built-in commands: pdm add, pdm remove, pdm install, pdm fix, pdm update, pdm self
-# # update, pdm list, pdm show, pdm build, pdm publish
-# # see docs at
-# # https://pdm.fming.dev/latest/usage/dependency/#select-a-subset-of-dependency-groups-to-be-installed-or-locked # noqa
-# # to install all or specific dependency groups
-# setup = "pdm install"
-# update-pdm = "pdm self update"
-# update-deps = "pdm update"
-# update-all = { composite = ["update-pdm", "update-deps"] }
-# format = "ruff format ."
-# lint = "ruff --fix --exit-non-zero-on-fix --show-fixes ."
-# check = "mypy ."
-# check-no-tests = "mypy . --exclude tests" # do not run mypy on `tests` directory
-# test = "pytest"
-# test-cov = "pytest --cov=<package_name>"
-# test-slow = "pytest -m 'slow'" # run all tests marked with `@pytest.mark.slow`
-# test-fast = "pytest -m 'not slow'" # run all tests except those marked with `@pytest.mark.slow`
-# # run all tests except those marked with `@pytest.mark.skip_ci` and create coverage report
-# test-ci = "pytest -m 'not skip_ci' --cov=<package_name> --cov-report=xml"
-# pre = "pre-commit run --all-files"
-# serve = "mkdocs serve"
-# deploy = { shell = "mkdocs build && mkdocs gh-deploy" }
-# fastapi = "uvicorn app.main:app --reload"
