--- a/not-synced/pyproject.toml
+++ b/not-synced/pyproject.toml
@@ -40,7 +40,7 @@ select = [
     # "ERA", # eradicate
     "EXE", # flake8-executable
     "F", # Pyflakes
-    "FA", # flake8-future-annotations
+    # "FA", # flake8-future-annotations
     "FAST", # FastAPI
     "FBT", # flake8-boolean-trap
     "FIX", # flake8-fixme
@@ -93,6 +93,7 @@ ignore = [
     "PD015", # use `.merge()` instead of `pd.merge()`, incorrect for Series
     "PD901", # don't use `df` as a variable name
     "PLR0913", # Too many arguments in function definition
+    "PLR2004", # Magic value used in comparison
     "PLW2901", # `for` loop variable `tag` overwritten by assignment target
     "PT004", # Fixture does not return anything, add leading underscore
     "PT011", # `pytest_raises(ValueError)` is too broad
@@ -101,6 +102,21 @@ ignore = [
     "S603", # `subprocess` call: check for execution of untrusted input
     "S607", # Starting a process with a partial executable path
     "TRY003", # Avoid specifying long messages outside the exception class
+    # The following rules conflict with the Ruff formatter (https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules)
+    "COM812", # missing-trailing-comma
+    "COM819", # prohibited-trailing-comma
+    "D206", # indent-with-spaces
+    "D300", # triple-single-quotes
+    "E111", # indentation-with-invalid-multiple
+    "E114", # indentation-with-invalid-multiple-comment
+    "E117", # over-indented
+    "ISC001", # single-line-implicit-string-concatenation
+    "ISC002", # multi-line-implicit-string-concatenation
+    "Q000", # bad-quotes-inline-string
+    "Q001", # bad-quotes-multiline-string
+    "Q002", # bad-quotes-docstring
+    "Q003", # avoidable-escaped-quote
+    "W191", # tab-indentation
 
 ]
 # Never try to fix automatically
