--- a/not-synced/pyproject.toml
+++ b/not-synced/pyproject.toml
@@ -43,7 +43,7 @@ select = [
     # "FA", # flake8-future-annotations
     "FAST", # FastAPI
     "FBT", # flake8-boolean-trap
-    "FIX", # flake8-fixme
+    # "FIX", # flake8-fixme
     "FURB", # refurb
     # "FLY", # flynt
     "G", # flake8-logging-format
@@ -55,7 +55,7 @@ select = [
     "LOG", # flake8-logging
     "N", # pep8-naming
     "NPY", # NumPy-specific rules # causes toml parsing error: unknown field
-    "PD", # pandas-vet
+    # "PD", # pandas-vet # false positives for polars
     "PERF", # Perflint
     "PGH", # pygrep-hooks
     "PIE", # flake8-pie
@@ -74,7 +74,7 @@ select = [
     "T10", # flake8-debugger
     # "T20", # flake8-print
     "TCH", # flake8-type-checking
-    "TD", # flake8-todos
+    # "TD", # flake8-todos
     "TID", # flake8-tidy-imports
     "TRY", # tryceratops
     "UP", # pyupgrade
@@ -90,8 +90,6 @@ ignore = [
     "G004", # Logging statement uses f-string
     "N803", # argument name should be lowercase
     "N806", # variable in function should be lowercase
-    "PD015", # use `.merge()` instead of `pd.merge()`, incorrect for Series
-    "PD901", # don't use `df` as a variable name
     "PLR0913", # Too many arguments in function definition
     "PLR2004", # Magic value used in comparison
     "PLW2901", # `for` loop variable `tag` overwritten by assignment target
