--- a/not-synced/pre-commit-config.yaml
+++ b/not-synced/pre-commit-config.yaml
@@ -7,47 +7,48 @@ repos:
     hooks:
       - id: check-added-large-files
         args: ["--maxkb=10000"]
-        stages: [commit]
+        stages: [pre-commit]
       - id: check-ast
-        stages: [commit]
+        stages: [pre-commit]
       - id: check-docstring-first
-        stages: [commit]
+        stages: [pre-commit]
       - id: check-json
-        stages: [commit]
+        stages: [pre-commit]
       - id: check-merge-conflict
-        stages: [commit]
+        stages: [pre-commit]
       - id: check-toml
-        stages: [commit]
+        stages: [pre-commit]
       - id: check-yaml
         # does not raise error for lines starting with !!
         args: ["--unsafe"]
-        stages: [commit]
+        stages: [pre-commit]
       - id: debug-statements
-        stages: [commit]
+        stages: [pre-commit]
       - id: detect-private-key
-        stages: [commit]
+        stages: [pre-commit]
       - id: end-of-file-fixer
-        stages: [commit]
+        stages: [pre-commit]
       - id: name-tests-test
         # test files start with test_ instead of ending with _test
         args: [-h]
-        stages: [commit]
+        stages: [pre-commit]
       - id: trailing-whitespace
-        stages: [commit]
+        stages: [pre-commit]
   - repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: v0.7.0
+    rev: v0.8.0
     hooks:
       - id: ruff
         args: [--fix, --exit-non-zero-on-fix, --show-fixes]
-        stages: [commit]
+        stages: [pre-commit]
       - id: ruff-format
-        stages: [commit]
+        stages: [pre-commit]
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.12.1
+    rev: v1.13.0
     hooks:
       - id: mypy
         args: [--ignore-missing-imports]
-        stages: [commit]
+        stages: [pre-commit]
+
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v4.0.0-alpha.8
     hooks:
@@ -59,7 +60,7 @@ repos:
         # run prettier only on these file types, specifying the file types in `args`
         # does not work
         files: "\\.([jt]sx?|html|css|ya?ml|json|md)$"
-        stages: [commit]
+        stages: [pre-commit]
   - repo: local
     hooks:
       - id: eslint
@@ -68,7 +69,7 @@ repos:
         args: ["--fix"]
         language: node
         files: \.(ts|tsx)$
-        stages: [commit]
+        stages: [pre-commit]
   - repo: local
     hooks:
       - id: go-fmt
@@ -77,10 +78,10 @@ repos:
         args: ["-w", "-l", "."]
         language: system
         files: \.go$
-        stages: [commit]
+        stages: [pre-commit]
   - repo: https://github.com/golangci/golangci-lint
     rev: v1.55.2
     hooks:
       - id: golangci-lint
         files: \.go$
-        stages: [commit]
+        stages: [pre-commit]
