--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -4,26 +4,33 @@ tap "eth-p/software"
 tap "heroku/brew"
 tap "homebrew/bundle"
 tap "homebrew/cask-fonts"
+tap "kaos/shell"
 tap "lencx/chatgpt", "https://github.com/lencx/ChatGPT.git"
 tap "lencx/nofwl"
 tap "microsoft/git"
 tap "oven-sh/bun"
+tap "quarylabs/quary"
 tap "romkatv/powerlevel10k"
 tap "yt-dlp/taps"
 brew "act"
 brew "bash"
 brew "bat"
 brew "bat-extras"
+brew "bats-core"
+brew "biome"
 brew "broot"
+brew "sqlite"
 brew "chafa"
 brew "cmake"
-brew "sqlite"
+brew "container-diff"
 brew "cookiecutter"
 brew "curl"
 brew "delve"
 brew "diff-so-fancy"
+brew "direnv"
 brew "docker"
 brew "docker-compose"
+brew "duckdb"
 brew "duf"
 brew "dust"
 brew "duti"
@@ -33,11 +40,15 @@ brew "eza"
 brew "fd"
 brew "ffmpeg"
 brew "figlet"
+brew "flyctl"
 brew "fzf"
 brew "gh"
 brew "git"
+brew "git-lfs"
 brew "go"
 brew "golangci-lint"
+brew "grafana"
+brew "graphviz"
 brew "hunspell"
 brew "hyperfine"
 brew "imagemagick"
@@ -45,16 +56,22 @@ brew "jdupes"
 brew "jq"
 brew "just"
 brew "kafka"
+brew "kubernetes-cli"
+brew "libgit2@1.7"
 brew "mas"
 brew "mcfly"
+brew "minikube"
 brew "most"
 brew "pandoc"
 brew "parallel"
 brew "perl"
 brew "php"
-brew "pipx"
+brew "pixi"
+brew "pkgconf"
+brew "powerlevel10k"
 brew "prettier"
 brew "procs"
+brew "prometheus"
 brew "pybind11"
 brew "pyenv"
 brew "ripgrep"
@@ -63,25 +80,38 @@ brew "sd"
 brew "shellcheck"
 brew "shfmt"
 brew "speedtest-cli"
+brew "sqlfluff"
+brew "sqlfmt"
+brew "sqlite-utils"
 brew "starship"
 brew "terraform"
 brew "terragrunt"
 brew "thefuck"
 brew "tldr"
 brew "tokei"
-brew "trash"
+brew "trash", link: true
 brew "tree"
 brew "typescript"
 brew "unzip"
+brew "uv"
 brew "vite"
 brew "watch"
 brew "yt-dlp"
+brew "zoxide"
 brew "zsh"
+brew "zsh-autopair"
+brew "kaos/shell/bats-support"
+brew "kaos/shell/bats-assert"
+brew "kaos/shell/bats-file"
+brew "quarylabs/quary/sqruff"
 cask "1password"
 cask "1password-cli"
 cask "alfred"
+cask "azure-data-studio"
 cask "backblaze"
 cask "backblaze-downloader"
+cask "bartender"
+cask "bettertouchtool"
 cask "chatgpt"
 cask "drawio"
 cask "dropbox"
@@ -116,11 +146,11 @@ cask "font-iosevka-nerd-font"
 cask "font-jetbrains-mono-nerd-font"
 cask "font-lekton-nerd-font"
 cask "font-liberation-nerd-font"
+cask "font-m+-nerd-font"
 cask "font-meslo-lg-nerd-font"
 cask "font-monofur-nerd-font"
 cask "font-monoid-nerd-font"
 cask "font-mononoki-nerd-font"
-cask "font-mplus-nerd-font"
 cask "font-noto-nerd-font"
 cask "font-open-dyslexic-nerd-font"
 cask "font-overpass-nerd-font"
@@ -137,6 +167,7 @@ cask "font-ubuntu-nerd-font"
 cask "font-victor-mono-nerd-font"
 cask "google-drive"
 cask "grammarly"
+cask "jordanbaird-ice"
 cask "karabiner-elements"
 cask "keycastr"
 cask "lunar"
@@ -155,28 +186,24 @@ cask "pycharm"
 cask "r"
 cask "rstudio"
 cask "visual-studio-code"
+cask "warp"
+cask "wkhtmltopdf"
 cask "zoom"
 mas "1Password for Safari", id: 1569813296
-mas "Actions", id: 1586435171
 mas "AdBlock Pro", id: 1018301773
 mas "AdGuard for Safari", id: 1440147259
-mas "Aiko", id: 1672085276
 mas "Amphetamine", id: 937984704
-mas "Boop", id: 1518425043
 mas "ChronoSync Express", id: 904801687
 mas "Color Picker", id: 1545870783
-mas "Consent-O-Matic", id: 1606897889
 mas "Data Jar", id: 1453273600
 mas "Drafts", id: 1435957248
 mas "Fantastical", id: 975937182
 mas "Goodnotes", id: 1444383602
-mas "Grammarly for Safari", id: 1462114288
 mas "Hand Mirror", id: 1502839586
 mas "iMovie", id: 408981434
 mas "Keynote", id: 409183694
 mas "Mactracker", id: 430255202
 mas "Microsoft Outlook", id: 985367838
-mas "Noir", id: 1592917505
 mas "Numbers", id: 409203825
 mas "Pages", id: 409201541
 mas "PDFgear", id: 1615523079
@@ -187,13 +214,16 @@ mas "Smart Converter", id: 447513724
 mas "TextSniper", id: 1528890965
 mas "Velja", id: 1607635845
 mas "Yoink", id: 457622435
+vscode "a-h.templ"
 vscode "aaron-bond.better-comments"
 vscode "adpyke.codesnap"
+vscode "adrianwilczynski.alpine-js-intellisense"
 vscode "albymor.increment-selection"
 vscode "alefragnani.project-manager"
 vscode "alexcvzz.vscode-sqlite"
 vscode "antfu.vite"
 vscode "artydeveloperduck.save-as-snippet"
+vscode "astro-build.astro-vscode"
 vscode "betafcc.ts-reveal-types"
 vscode "bierner.color-info"
 vscode "bierner.github-markdown-preview"
@@ -205,62 +235,78 @@ vscode "bierner.markdown-mermaid"
 vscode "bierner.markdown-preview-github-styles"
 vscode "bierner.markdown-shiki"
 vscode "bierner.markdown-yaml-preamble"
+vscode "biomejs.biome"
 vscode "bmalehorn.shell-syntax"
 vscode "bmuskalla.vscode-tldr"
 vscode "bodil.prettier-toml"
 vscode "bradlc.vscode-tailwindcss"
-vscode "Cardinal90.multi-cursor-case-preserve"
+vscode "bruno-api-client.bruno"
+vscode "cardinal90.multi-cursor-case-preserve"
 vscode "charliermarsh.ruff"
-vscode "ChrisChinchilla.vscode-pandoc"
+vscode "chrischinchilla.vscode-pandoc"
 vscode "christian-kohler.path-intellisense"
 vscode "chrmarti.regex"
 vscode "cmoog.sqlnotebook"
-vscode "CodeQue.codeque"
+vscode "codeque.codeque"
 vscode "codezombiech.gitignore"
-vscode "Codium.codium"
+vscode "codium.codium"
+vscode "cweijan.dbclient-jdbc"
+vscode "cweijan.duckdb-packs"
+vscode "cweijan.vscode-database-client2"
+vscode "cweijan.vscode-mysql-client2"
+vscode "cweijan.vscode-redis-client"
 vscode "darkriszty.markdown-table-prettify"
 vscode "dbaeumer.vscode-eslint"
 vscode "deerawan.vscode-dash"
-vscode "DiogoNolasco.pyinit"
+vscode "diogonolasco.pyinit"
 vscode "dnicolson.binary-plist"
 vscode "donjayamanne.githistory"
 vscode "donjayamanne.vscode-jupytext"
-vscode "DotJoshJohnson.xml"
+vscode "dorzey.vscode-sqlfluff"
+vscode "dotjoshjohnson.xml"
 vscode "ecmel.vscode-html-css"
 vscode "edb.settings-on-fire"
-vscode "EditorConfig.EditorConfig"
-vscode "emeraldwalk.RunOnSave"
+vscode "editorconfig.editorconfig"
+vscode "eliostruyf.vscode-front-matter"
+vscode "emeraldwalk.runonsave"
 vscode "emmanuelbeziat.vscode-great-icons"
+vscode "eriklynd.json-tools"
 vscode "esbenp.prettier-vscode"
 vscode "eseom.nunjucks-template"
+vscode "evidence.evidence-vscode"
+vscode "evidence.sqltools-duckdb-driver"
 vscode "fabiospampinato.vscode-commands"
 vscode "formulahendry.auto-close-tag"
 vscode "formulahendry.code-runner"
-vscode "gerane.Theme-Jellybeams"
-vscode "GitHub.codespaces"
-vscode "GitHub.copilot"
-vscode "GitHub.copilot-chat"
-vscode "GitHub.github-vscode-theme"
-vscode "GitHub.remotehub"
+vscode "gerane.theme-jellybeams"
+vscode "github.codespaces"
+vscode "github.copilot"
+vscode "github.copilot-chat"
+vscode "github.github-vscode-theme"
+vscode "github.remotehub"
 vscode "github.vscode-github-actions"
-vscode "GitHub.vscode-pull-request-github"
+vscode "github.vscode-pull-request-github"
 vscode "goessner.mdmath"
 vscode "golang.go"
-vscode "GregorBiswanger.json2ts"
-vscode "Gruntfuggly.todo-tree"
+vscode "gregorbiswanger.json2ts"
+vscode "gruntfuggly.todo-tree"
+vscode "hashicorp.terraform"
 vscode "hediet.vscode-drawio"
 vscode "hoovercj.vscode-settings-cycler"
-vscode "IBM.output-colorizer"
+vscode "ibm.output-colorizer"
 vscode "idleberg.applescript"
+vscode "innoverio.vscode-dbt-power-user"
 vscode "jakearl.search-editor-apply-changes"
-vscode "James-Yu.latex-workshop"
-vscode "JannisX11.batch-rename-extension"
+vscode "james-yu.latex-workshop"
+vscode "jannisx11.batch-rename-extension"
 vscode "jeff-hykin.polacode-2019"
 vscode "jerrygoyal.shortcut-menu-bar"
-vscode "Jeusto.warm-up-typing-test"
+vscode "jetmartin.bats"
+vscode "jeusto.warm-up-typing-test"
+vscode "jjjermiah.pixi-vscode"
 vscode "jmviz.quote-list"
 vscode "kevinkyang.auto-comment-blocks"
-vscode "KevinRose.vsc-python-indent"
+vscode "kevinrose.vsc-python-indent"
 vscode "kisstkondoros.vscode-gutter-preview"
 vscode "knowsuchagency.pdm-task-provider"
 vscode "koehlma.markdown-math"
@@ -282,6 +328,7 @@ vscode "mkhl.shfmt"
 vscode "mrmlnc.vscode-postcss-sorting"
 vscode "ms-azuretools.vscode-docker"
 vscode "ms-dotnettools.vscode-dotnet-runtime"
+vscode "ms-kubernetes-tools.vscode-kubernetes-tools"
 vscode "ms-python.debugpy"
 vscode "ms-python.gather"
 vscode "ms-python.mypy-type-checker"
@@ -307,73 +354,84 @@ vscode "ms-vscode.test-adapter-converter"
 vscode "ms-vscode.vscode-github-issue-notebooks"
 vscode "ms-vscode.vscode-typescript-next"
 vscode "ms-vscode.wordcount"
+vscode "mtxr.sqltools"
 vscode "nicoespeon.slides"
 vscode "njpwerner.autodocstring"
 vscode "njqdev.vscode-python-typehint"
-vscode "notZaki.pandocciter"
-vscode "Orta.vscode-twoslash-queries"
+vscode "notzaki.pandocciter"
+vscode "orta.vscode-twoslash-queries"
+vscode "otovo-oss.htmx-tags"
 vscode "oven.bun-vscode"
+vscode "passioinc.go-inline-pgformatter"
 vscode "patbenatar.advanced-new-file"
 vscode "pflannery.vscode-versionlens"
 vscode "phplasma.csv-to-table"
+vscode "pkief.material-icon-theme"
 vscode "pmneo.tsimporter"
+vscode "pomdtr.excalidraw-editor"
 vscode "quarto.quarto"
+vscode "quary.sqruff"
 vscode "qufiwefefwoyn.inline-sql-syntax"
 vscode "qwtel.sqlite-viewer"
 vscode "rafamel.subtle-brackets"
+vscode "randomfractalsinc.duckdb-sql-tools"
 vscode "rangav.vscode-thunder-client"
-vscode "RDebugger.r-debugger"
+vscode "rdebugger.r-debugger"
 vscode "rebornix.toggle"
-vscode "REditorSupport.r"
-vscode "ReneSaarsoo.sql-formatter-vsc"
+vscode "redhat.vscode-yaml"
+vscode "redis.redis-for-vscode"
+vscode "reditorsupport.r"
+vscode "renesaarsoo.sql-formatter-vsc"
 vscode "richie5um2.vscode-sort-json"
 vscode "rioj7.select-by"
 vscode "rioj7.vscode-remove-comments"
-vscode "ritwickdey.LiveServer"
+vscode "ritwickdey.liveserver"
 vscode "rogalmic.bash-debug"
 vscode "ryu1kn.edit-with-shell"
 vscode "ryuta46.multi-command"
+vscode "samuelcolvin.jinjahtml"
 vscode "sidthesloth.html5-boilerplate"
 vscode "sleistner.vscode-fileutils"
 vscode "sourcegraph.cody-ai"
 vscode "sourcery.sourcery"
+vscode "sperovita.alpinejs-syntax-highlight"
 vscode "stackbreak.comment-divider"
 vscode "stkb.rewrap"
 vscode "streetsidesoftware.code-spell-checker"
 vscode "streetsidesoftware.code-spell-checker-german"
 vscode "stringham.move-ts"
+vscode "svelte.svelte-vscode"
 vscode "svipas.control-snippets"
-vscode "TakumiI.markdowntable"
+vscode "takumii.markdowntable"
 vscode "tamasfe.even-better-toml"
 vscode "tecosaur.latex-utilities"
 vscode "telesoho.vscode-markdown-paste-image"
 vscode "thqby.vscode-autohotkey2-lsp"
-vscode "TianyiShi.rmarkdown"
+vscode "tianyishi.rmarkdown"
 vscode "timonwong.shellcheck"
 vscode "tonybaloney.vscode-pets"
 vscode "tuxtina.json2yaml"
-vscode "Tyriar.sort-lines"
+vscode "tyriar.sort-lines"
 vscode "uctakeoff.vscode-counter"
 vscode "usernamehw.errorlens"
 vscode "vincaslt.highlight-matching-tag"
-vscode "VisualStudioExptTeam.intellicode-api-usage-examples"
-vscode "VisualStudioExptTeam.vscodeintellicode"
-vscode "VisualStudioExptTeam.vscodeintellicode-completions"
-vscode "VisualStudioExptTeam.vscodeintellicode-insiders"
+vscode "visualstudioexptteam.intellicode-api-usage-examples"
+vscode "visualstudioexptteam.vscodeintellicode"
+vscode "visualstudioexptteam.vscodeintellicode-completions"
+vscode "visualstudioexptteam.vscodeintellicode-insiders"
 vscode "vscode-icons-team.vscode-icons"
-vscode "vulkd.inline-sql-formatter"
 vscode "w0o0o.bun-scripts"
-vscode "WallabyJs.console-ninja"
-vscode "WallabyJs.quokka-vscode"
-vscode "WallabyJs.wallaby-vscode"
+vscode "wallabyjs.console-ninja"
+vscode "wallabyjs.quokka-vscode"
+vscode "wallabyjs.wallaby-vscode"
 vscode "wesbos.theme-cobalt2"
 vscode "wix.vscode-import-cost"
-vscode "YoavBls.pretty-ts-errors"
-vscode "YRM.type-challenges"
+vscode "yoavbls.pretty-ts-errors"
+vscode "yrm.type-challenges"
 vscode "yy0931.vscode-sqlite3-editor"
 vscode "yzane.markdown-pdf"
 vscode "yzhang.markdown-all-in-one"
-vscode "Zignd.html-css-class-completion"
+vscode "zignd.html-css-class-completion"
 vscode "ziyasal.vscode-open-in-github"
 vscode "znck.grammarly"
 vscode "zokugun.explicit-folding"
