Add ty extension

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -28,7 +28,6 @@ brew "curl"
 brew "delve"
 brew "diff-so-fancy"
 brew "direnv"
-brew "docker"
 brew "docker-compose"
 brew "duckdb"
 brew "duf"
@@ -113,6 +112,7 @@ cask "backblaze-downloader"
 cask "bartender"
 cask "bettertouchtool"
 cask "chatgpt"
+cask "docker"
 cask "drawio"
 cask "dropbox"
 cask "font-3270-nerd-font"
@@ -221,6 +221,7 @@ vscode "adrianwilczynski.alpine-js-intellisense"
 vscode "albymor.increment-selection"
 vscode "alefragnani.project-manager"
 vscode "alexcvzz.vscode-sqlite"
+vscode "altimateai.vscode-altimate-mcp-server"
 vscode "antfu.vite"
 vscode "artydeveloperduck.save-as-snippet"
 vscode "astro-build.astro-vscode"
@@ -260,6 +261,7 @@ vscode "dbaeumer.vscode-eslint"
 vscode "deerawan.vscode-dash"
 vscode "diogonolasco.pyinit"
 vscode "dnicolson.binary-plist"
+vscode "docker.docker"
 vscode "donjayamanne.githistory"
 vscode "donjayamanne.vscode-jupytext"
 vscode "dorzey.vscode-sqlfluff"
