--- a/not-synced/pyproject.toml
+++ b/not-synced/pyproject.toml
@@ -18,69 +18,79 @@ show-fixes = true # enumerate fixed violations
 output-format = "grouped" # Group violations by containing file
 preview = true # Enable preview mode
 
+[tool.ruff.format]
+indent-style = "space" # Use spaces instead of tabs for indentation
+preview = true # Enable preview style formatting.
+quote-style = "double" # Prefer double quotes over single quotes
+skip-magic-trailing-comma = false # Keep trailing commas
+
 [tool.ruff.lint]
 # see explanation of letter codes at https://beta.ruff.rs/docs/rules/
 select = [
-    "A", # flake8-builtins
     "AIR", # Airflow
-    "ANN", # flake8-annotations
-    "ARG", # flake8-unused-arguments
-    "ASYNC", # flake8-async
-    "B", # flake8-bugbear
-    # "BLE", # flake8-blind-except
-    "C4", # flake8-comprehensions
-    "C90", # mccabe
-    "COM", # flake8-commas
-    # "CPY", # flake8-copyright
-    # "D", # pydocstyle
-    # "DOC", # pydoclint
-    "DJ", # flake8-django
-    "DTZ", # flake8-datetimez
-    "E", # pycodestyle Error
-    # "EM", # flake8-errmsg
     # "ERA", # eradicate
-    "EXE", # flake8-executable
-    "F", # Pyflakes
-    # "FA", # flake8-future-annotations
     "FAST", # FastAPI
+    "YTT", # flake8-2020
+    "ANN", # flake8-annotations
+    "ASYNC", # flake8-async
+    "S", # flake8-bandit
+    # "BLE", # flake8-blind-except
     "FBT", # flake8-boolean-trap
+    "B", # flake8-bugbear
+    "A", # flake8-builtins
+    "COM", # flake8-commas
+    "C4", # flake8-comprehensions
+    # "CPY", # flake8-copyright
+    "DTZ", # flake8-datetimez
+    "T10", # flake8-debugger
+    "DJ", # flake8-django
+    # "EM", # flake8-errmsg
+    "EXE", # flake8-executable
     # "FIX", # flake8-fixme
-    "FURB", # refurb
-    # "FLY", # flynt
-    "G", # flake8-logging-format
-    "I", # isort
-    "ICN", # flake8-import-conventions
-    "INP", # flake8-no-pep420
+    # "FA", # flake8-future-annotations
     "INT", # flake8-gettext
     "ISC", # flake8-implicit-str-concat
+    "ICN", # flake8-import-conventions
     "LOG", # flake8-logging
-    "N", # pep8-naming
+    "G", # flake8-logging-format
+    "INP", # flake8-no-pep420
+    "PIE", # flake8-pie
+    # "T20", # flake8-print
+    "PYI", # flake8-pyi
+    "PT", # flake8-pytest-style
+    "Q", # flake8-quotes
+    "RSE", # flake8-raise
+    "RET", # flake8-return
+    "SLF", # flake8-self
+    "SIM", # flake8-simplify
+    "SLOT", # flake8-slots
+    "TID", # flake8-tidy-imports
+    # "TD", # flake8-todos
+    "TC", # flake8-type-checking
+    "ARG", # flake8-unused-arguments
+    "PTH", # flake8-use-pathlib
+    # "FLY", # flynt
+    "I", # isort
+    "C90", # mccabe
     "NPY", # NumPy-specific rules # causes toml parsing error: unknown field
     # "PD", # pandas-vet # false positives for polars
+    "N", # pep8-naming
     "PERF", # Perflint
-    "PGH", # pygrep-hooks
-    "PIE", # flake8-pie
-    "PL", # flake8-pylint
-    "PT", # flake8-pytest-style
-    "PTH", # flake8-use-pathlib
-    "PYI", # flake8-pyi
-    "Q", # flake8-quotes
-    "RET", # flake8-return
-    "RSE", # flake8-raise
-    "RUF", # Ruff-specific rules
-    "S", # flake8-bandit
-    "SIM", # flake8-simplify
-    "SLF", # flake8-self
-    "SLOT", # flake8-slots
-    "T10", # flake8-debugger
-    # "T20", # flake8-print
-    "TCH", # flake8-type-checking
-    # "TD", # flake8-todos
-    "TID", # flake8-tidy-imports
-    "TRY", # tryceratops
-    "UP", # pyupgrade
+    "E", # pycodestyle Error
     "W", # pycodestyle Warning
-    "YTT", # flake8-2020
+    # "DOC", # pydoclint
+    # "D", # pydocstyle
+    "F", # Pyflakes
+    "PGH", # pygrep-hooks
+    "PL", # Pylint
+    "PLC", # Pylint Convention
+    "PLE", # Pylint Error
+    "PLR", # Pylint Refactor
+    "PLW", # Pylint Warning
+    "UP", # pyupgrade
+    "FURB", # refurb
+    "RUF", # Ruff-specific rules
+    "TRY", # tryceratops
 
 ]
 ignore = [
@@ -130,12 +140,6 @@ unfixable = [
     "S101", # Allow `assert` statements in tests
 
 ]
-
-[tool.ruff.format]
-indent-style = "space" # Use spaces instead of tabs for indentation
-preview = true # Enable preview style formatting.
-quote-style = "double" # Prefer double quotes over single quotes
-skip-magic-trailing-comma = false # Keep trailing commas
 
 [tool.ruff.lint.flake8-annotations]
 suppress-dummy-args = true # suppress violations "dummy" variables like `_`
